<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Paciente.PacienteAddFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/TituloPacienteViewADD"
                android:gravity="center"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_Pas" />

            <TextView
                android:id="@+id/PacienteTituloNomeADD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/P_nome" />

            <EditText
                android:id="@+id/CampoPacienteNomeADD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                 />

            <TextView
                android:id="@+id/PacienteTituloGrpsADD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Pacinete_grps" />

            <Spinner
                android:id="@+id/spinnerGrupSADD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/PacienteTituloCelularADD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/P_celular" />

            <EditText
                android:id="@+id/CampoPacienteCelularADD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <TextView
                android:id="@+id/PacienteTituloFixoADD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/P_fixo" />

            <EditText
                android:id="@+id/CampoPacienteFixoADD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ButtonPacienteSalvarADD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:backgroundTint="#FF427F9F"
                    android:text="@string/app_SAV" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>