<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewGerenciarConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_Con"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonListarConsulta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:backgroundTint="#FF427F9F"
            android:text="@string/app_Lis" />

        <Button
            android:id="@+id/buttonAdicionarConsulta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            app:backgroundTint="#FF427F9F"
            android:text="@string/app_Nov" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameConsulta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>




</LinearLayout>
